--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
@@ -15,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
-    "sequelize": "^6.34.0"
+    "sequelize": "^6.34.0",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
