--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "start-server": "node server.js"
+    "start": "node dist/server.js"
   },
   "author": "Owen Burnett",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "esm": "^3.2.25",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
     "sequelize": "^6.34.0",
