--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/app/server.js"
+    "start": "node ./app/server.js"
   },
   "author": "Owen Burnett",
   "license": "ISC",
@@ -20,6 +20,8 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.16",
+    "@types/express": "^4.17.21",
     "nodemon": "^3.0.1"
   }
 }
