--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
       "sourceMap": true,
       "forceConsistentCasingInFileNames": true,
       "strictFunctionTypes": true,
+      "strict": true,
       "outDir": "dist",
       "baseUrl": ".",
       "paths": {
