--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/server.js"
+    "start": "node --es-module-specifier-resolution=node ./dist/server.js"
   },
   "author": "Owen Burnett",
   "license": "ISC",
@@ -15,7 +15,11 @@
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "inversify": "^6.0.2",
+    "inversify-binding-decorators": "^4.0.0",
+    "inversify-express-utils": "^6.4.6",
     "mysql2": "^3.6.3",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.34.0",
     "typescript": "^5.2.2"
   },
