--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "mysql2": "^3.6.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.34.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/winston": "^2.4.4",
     "nodemon": "^3.0.1"
   }
 }
