--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "inversify": "^6.0.2",
     "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.4.6",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.34.0",
     "typescript": "^5.2.2",
@@ -26,6 +30,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/passport-jwt": "^3.0.13",
     "@types/winston": "^2.4.4",
     "nodemon": "^3.0.1"
   }
