--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --es-module-specifier-resolution=node ./dist/server.js"
+    "start": "node --es-module-specifier-resolution=node ./dist/app/server.js"
   },
   "license": "ISC",
   "dependencies": {
