--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "esm": "^3.2.25",
@@ -29,6 +30,7 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
