--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie": "^0.6.0",
     "cors": "^2.8.5",
@@ -30,6 +31,7 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
