Initial commit. Creating nodejs backend for social media app

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "esm": "^3.2.25",
+    "example": "file:",
     "express": "^4.18.2",
     "inversify": "^6.0.2",
     "inversify-binding-decorators": "^4.0.0",
