--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie": "^0.6.0",
@@ -32,6 +33,7 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/cors": "^2.8.16",
