--- a/mysql-docker/docker-compose.yml
+++ b/mysql-docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: custweb
+      MYSQL_DATABASE: socialmediajs
     volumes:
       - local_mysql:/var/lib/mysql
   adminer:
